--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,66 @@
-# Compiled class file
-*.class
+# IntelliJ IDEA specific files
+.idea/
+*.iml
+*.iws
+out/
+*.ipr
 
-# Log file
+# Maven specific files
+target/
+pom.xml.tag
+pom.xml.releaseBackup
+pom.xml.versionsBackup
+pom.xml.next
+release.properties
+dependency-reduced-pom.xml
+buildNumber.properties
+.mvn/timing.properties
+.mvn/wrapper/maven-wrapper.jar
+
+# Logs
+logs/
 *.log
+*.log.*
 
-# BlueJ files
-*.ctxt
+# OS-specific files
+.DS_Store
+Thumbs.db
+desktop.ini
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
-# Package Files #
-*.jar
+# Spring Boot specific files
 *.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
+*.jar
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
-replay_pid*
+# Environment and security files
+.env
+*.key
+*.pem
+*.crt
+*.pfx
+*.jks
+*.p12
+*.der
+
+# IDE and build tools
+/.classpath
+/.project
+/.settings/
+
+# Temporary files
+*.swp
+*.swo
+*.bak
+
+# Docker
+docker-compose.override.yml
+
+# Database files
+*.h2.db
+*.mv.db
+*.sqlite
+
+# Test reports and coverage
+/target/surefire-reports/
+/target/failsafe-reports/
+/coverage/
+jacoco.exec
